<resources>
    <string name="app_name">Snake Messenger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="contact_name">Contact Name</string>
    <string name="status">Status</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="active_now">Active now</string>
    <string name="send_message">Send message</string>
    <string name="save_contact">Save contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="delete_contact">Delete contact</string>
    <string name="no_contacts_selected">No contacts selected.</string>
    <string name="nearby_users">Nearby users</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="no_nearby_users_found">No nearby users found.</string>
    <string name="type_a_message">Type a message...</string>
    <string name="username">Username</string>
    <string name="advertising_id">Advertising ID</string>
    <string name="user_status">User status</string>
    <string name="update_profile">Update profile</string>
    <string name="snake_messenger">Snake Messenger</string>
    <string name="sign_in">Sign In</string>
    <string name="new_to_the_app">New to the app?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="select_all">Select all</string>
    <string name="no_contacts_found">No contacts found.</string>
    <string name="activity_title">Activity title</string>
    <string name="chat_contact_name">Contact name</string>
    <string name="timestamp">Timestamp</string>
    <string name="message_content">Message content</string>
    <string name="available_now">Available now</string>
    <string name="x">X</string>
    <string name="no_active_conversations">You have no active conversations.</string>
    <string name="contacts_list_empty">Your contacts list is empty.</string>
    <string name="select_contacts">Select contacts</string>
    <string name="type_a_name">Type a name...</string>
    <string name="phone_number">Phone number</string>
</resources>
