<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:emojicon="http://schemas.android.com/tools"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/contact_image_item"
            android:layout_gravity="start"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/profile_image"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimaryDark"/>
        
        <ImageView
            android:id="@+id/status"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/contact_online"
            android:layout_alignBottom="@id/contact_image_item"
            android:layout_alignEnd="@id/contact_image_item"/>

        <TextView
            android:id="@+id/contact_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/contact_name"
            android:textColor="@color/colorAccent"
            android:layout_toEndOf="@+id/contact_image_item"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/timestamp"
            android:textColor="@color/colorText"
            android:layout_below="@id/contact_name_item"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"/>

        <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
            android:id="@+id/contact_status_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/available_now"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:layout_toEndOf="@+id/contact_image_item"
            android:layout_toStartOf="@id/timestamp"
            android:layout_below="@+id/contact_name_item"
            android:layout_marginStart="10dp"
            emojicon:emojiconSize="30sp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>