<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".chats.SendMessageActivity"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/send_msg_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/send_message_bar_layout"
            layout="@layout/send_message_bar_layout">
        </include>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_msg_appBarLayout"
        android:backgroundTint="@color/colorWhite"
        android:background="@drawable/custom_layout">

        <TextView
            android:id="@+id/selected_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/no_contacts_selected"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/select_all"
            android:layout_marginEnd="5dp"
            android:layout_centerVertical="true"
            android:text="@string/select_all"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/send_message_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative_layout"
        android:layout_above="@+id/input_layout"/>

    <TextView
        android:id="@+id/no_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_contacts_found"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <RelativeLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/send_message_btn"
            android:orientation="horizontal"
            android:background="@drawable/custom_input">
            <ImageView
                android:id="@+id/pick_picture_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_photo_camera_24"/>
            <ImageView
                android:id="@+id/pick_emoji_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_emoji_emotions_24"/>

            <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
                android:id="@+id/input_message"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/type_a_message"
                android:textColorHint="@color/colorText"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/message_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                emojicon:emojiconSize="30sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/send_message_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimaryDark"
            android:src="@drawable/ic_send_white_24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</RelativeLayout>